Fix headline overflow for smaller screens

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -98,7 +98,7 @@ h2 {
   display: block;
   color: white;
   text-decoration: none;
-  height: 280px;
+  min-height: 280px;
   text-align: center;
   padding: 10px;
 }
